--- a/journal/202110.md
+++ b/journal/202110.md
@@ -6,10 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Highlights for October: {
 
-- Bitcoin SPV and BTC registration fees merged in DCRDEX
-- maybe summarize that things are shaping up for the next release
 - Politeia celebrated its third year of operation
 - mobile wallets funded for another year, GoDCR rejected but is preparing a revised proposal
+- Bitcoin SPV and registration fees paid in DCR merged in DCRDEX
+- maybe summarize that things are shaping up for the next release
 
 }
 
@@ -21,9 +21,7 @@ Contents: { sync }
 - [Network](#network)
 - [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
-- [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
@@ -69,7 +67,7 @@ User-facing changes:
 - implemented new UI design on [LN Overview](https://github.com/decred/decrediton/pull/3551) tab. Wallet, Network, and Watchtowers tabs have been grouped under a newly introduced Advanced tab.
 - new UI design for wallet [modals](https://github.com/decred/decrediton/pull/3534) with added password visibility toggle
 - added the ability to use [random VSP](https://github.com/decred/decrediton/pull/3560) in Automatic Ticket Purchases (with a configurable maximum fee)
-- automaticalle enable the new [per-account](https://github.com/decred/decrediton/pull/3579) encryption for new wallets
+- automatically enable the new [per-account](https://github.com/decred/decrediton/pull/3579) encryption for new wallets
 - improved usability of the [VSP selector](https://github.com/decred/decrediton/pull/3563)
 - ~13 bug fixes
 
@@ -98,8 +96,8 @@ User-facing changes:
 
 Changes in `politeiavoter` command-line tool:
 
-- changed [trickling](https://github.com/decred/politeia/pull/1556) method (trickling is slow sending of votes). Previously it has sent votes in a sequence with random time intervals. This has proven to be brittle as one slow/failed send was delaying all other votes. The new method uses independent parallel voting processes that start at random times and do not affect each other, making trickling more robust.
-- added an option to abort if vote trickling cannot finish with enough [extra time](https://github.com/decred/politeia/pull/1542) before the vote end. It alarms the user to adjust parameters so that enough time (12 hours by default) is left to retry any failed votes, which may happen over poor connections or Tor.
+- changed the method of [trickling](https://github.com/decred/politeia/pull/1556) method (slow sending of votes). Previously it has sent votes in a sequence with random time intervals. This has proven to be brittle as one slow/failed send was delaying all other votes. The new method uses independent parallel voting processes that start at random times and do not affect each other, making trickling more robust.
+- added an option to abort if vote trickling cannot finish with enough [extra time](https://github.com/decred/politeia/pull/1542) prior to the vote end. It alarms the user to adjust parameters so that enough time (12 hours by default) is left to retry any failed votes, which may happen over poor connections or Tor.
 - brought back printing of proposal [names](https://github.com/decred/politeia/pull/1548) in `inventory` command
 
 Backend and internal changes:
@@ -111,7 +109,7 @@ Backend and internal changes:
 - added a new `pictl` command to test the [RFP flow](https://github.com/decred/politeia/pull/1551)
 - ~4 bug fixes
 
-Refactoring in preparation for the [user layer rewrite](https://github.com/decred/politeia/issues/1479) { this is the master issue, correct? } (largest chunk of work for the [2021 Q3](https://proposals.decred.org/record/91cfcc8) proposal):
+Refactoring in preparation for the [user layer rewrite](https://github.com/decred/politeia/issues/1479) (largest chunk of work for the [2021 Q3](https://proposals.decred.org/record/91cfcc8) proposal):
 
 - politeiawww codebase reorganized to move legacy APIs into a [`legacy`](https://github.com/decred/politeia/pull/1523) package. This will make it easier to rewrite the user layer to use a plugin architecture and to allow for horizontal scaling.
 - extracted [`logger`](https://github.com/decred/politeia/pull/1527) package to allow plugins to configure their logging and become self-contained
@@ -165,7 +163,7 @@ Progress towards Ethereum support:
 
 - implemented several [backend methods](https://github.com/decred/dcrdex/issues/1154) ([swap](https://github.com/decred/dcrdex/pull/1218) and [redeem](https://github.com/decred/dcrdex/pull/1219) estimations, order [funding](https://github.com/decred/dcrdex/pull/1221), message [signing](https://github.com/decred/dcrdex/pull/1228), and more)
 - added function to initiate a [batch](https://github.com/decred/dcrdex/pull/1251) of multiple swaps in the same transaction (saves gas)
-- [derive](https://github.com/decred/dcrdex/pull/1225) the internal Ethereum wallet from app seed
+- [derive](https://github.com/decred/dcrdex/pull/1225) the internal Ethereum wallet from DEX app seed
 
 { image candidates: 1232, from twitter }
 
@@ -208,7 +206,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 - updated to [latest](https://github.com/planetdecred/dcrlibwallet/pull/209) dcrd, dcrwallet, and dcrdata modules
 - added function to get the [timestamp](https://github.com/planetdecred/dcrlibwallet/pull/208) of the last sync with Politeia
 
-{ image candidates: 663, 646(comment), 664 any better shots? }
+{ image candidates: 663, 646(comment), 664 - any better shots? }
 
 Development continued despite the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) getting rejected (49% Yes). Look forward to the revised version and new app builds.
 
@@ -235,28 +233,26 @@ Community stats as of Nov 2:
 - [Telegram](https://t.me/Decred) users: 2,940 (+31)
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,620 (+10), views: 197K (+1K)
 
-{ maybe list/link notable SM activity }
-
 
 ## Governance
 
-In October the new [treasury](https://dcrdata.decred.org/treasury) received 10,678 DCR worth $1.3 Million at the month's average rate of $121.57. 974 DCR was spent to pay contractors, worth $118K at October's rate, or $136K at September's billing rate of $139.56. As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 733,772 DCR (82.5 million USD at $112.42).
+In October the new [treasury](https://dcrdata.decred.org/treasury) received 10,678 DCR worth $1.3 million at the month's average rate of $121.57. 974 DCR was spent to pay contractors, worth $118K at October's rate, or $136K at September's billing rate of $139.56. As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 733,772 DCR (82.5 million USD at $112.42).
 
 One [proposal](https://proposals.decred.org/record/c1f5b5c) was submitted this month, @ammarooni returns with a proposal that revises an earlier book [proposal](https://proposals.decred.org/proposals/9e1d644) to remove the book in favor of a steady stream of papers and social media content, memes and meetups. 
 
-The two proposals from @raedah were voted on this month, the [one](https://proposals.decred.org/record/6db3c4e) for mobile wallets was approved with 97.2% yes votes and 66% turnout, while the [proposal](https://explorer.dcrdata.org/proposal/f7d9fc852e309b31) to continue funding GoDCR was rejected with 49% approval and turnout of 73%.
+The two proposals from @raedah were voted on this month, the one for [mobile wallets](https://proposals.decred.org/record/6db3c4e) was approved with 97.2% yes votes and 66% turnout, while the proposal to continue funding [GoDCR](https://explorer.dcrdata.org/proposal/f7d9fc852e309b31) was rejected with 49% approval and turnout of 73%.
 
 See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047/) and [issue 48](https://blockcommons.red/politeia-digest/issue048/) for more details on the month's proposals.
 
 @richardred published numbers and graphs for Politeia's [third year](https://blockcommons.red/publication/politeia-at-3/). A few highlights:
 
-- third year: 31 proposals published, 20 approved, 11 rejected, 2 abandoned
+- 31 proposals published, of which 20 approved, 11 rejected, 2 abandoned
 - average (mean) voter participation improved considerably with 46% in year 3, compared to 31% in year 1 and 28% in year 2
-- software development proposals have increased in count, budgets, and support
+- software development proposals have increased in count, budgets, and voter support
 - { maybe add a similar 1-sentence recap of how Marketing proposals have changed, I didnt grasp the big picture - @bee }
 - the proportion of proposals from people who are already contractors has gone up from 48% in year 2 to 77% in year 3
 - the number of mixed tickets (those with extra privacy) has been increasing
-- all-time (3 years): 128 proposals published, of which 66 approved, 42 rejected, 20 abandoned
+- all-time stats for 3 years: 128 proposals published, of which 66 approved, 42 rejected, 20 abandoned
 
 { image: maybe some chart from year 3 report }
 
@@ -285,14 +281,12 @@ The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&z
 
 { image: dcrdata mixed% shot }
 
-{ any interesting analysis or events in the network }
-
 
 ## Ecosystem
 
-Legacy VSP stakepool.eu has been [removed](https://github.com/decred/dcrwebapi/pull/153) from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). It is still online to vote the remaining live tickets (7 as of Nov 1). The VSP launched in May 2016 with codename `India`, only 3 months after Decred was born. Thank you for 5 years of service!
+Legacy VSP stakepool.eu has been [removed](https://github.com/decred/dcrwebapi/pull/153) from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). It is still online to vote the remaining live tickets (7 as of Nov 1). This VSP launched in May 2016 with codename `India`, just 3 months after Decred was [born](https://dcrdata.decred.org/block/1). Thank you for 5 years of service!
 
-Legacy VSP from 99split.com has handled its final live ticket and was shutdown. It has served since late 2019 and was one of the few vendors to actively support [ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher) by coordinating sessions and creating user-friendly [video](https://www.youtube.com/watch?v=StF7GF5W_eM) [tutorials](https://www.youtube.com/watch?v=QOBjep3Ll7E) for setting it up. Users are welcome at its new [vspd instance](https://vspd.99split.com/) with a 0.99% fee and 1.7K voted tickets.
+Legacy VSP from 99split.com has handled its final live ticket and was shutdown. It has served since late 2019 and was one of the few vendors to actively support [ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher) by coordinating sessions and creating user-friendly [video](https://www.youtube.com/watch?v=StF7GF5W_eM) [tutorials](https://www.youtube.com/watch?v=QOBjep3Ll7E). Users are welcome at its new [vspd instance](https://vspd.99split.com/) with a 0.99% fee and 1.7K voted tickets.
 
 For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the coming consensus upgrades. As of Nov 1, all legacy VSPs managed less than 260 tickets or 0.6% of the ticket pool.
 
@@ -310,7 +304,7 @@ Secured the following news articles:
 
 - the news about Decred reaching 77% voter participation and marking three years of Politeia was covered by [Crowdfund Insider](https://www.crowdfundinsider.com/2021/10/182204-decentralized-digital-currency-project-decred-dcr-reaches-governance-milestone-of-77-voter-participation/)
 
-In response to a common question "What's up in Decred and where it is heading?" @bee wrote up a [summary](https://www.reddit.com/r/decred/comments/q1402a/weekly_many_musings_mondays/hfji878/) of recent developments and mid-term goals.
+In response to a common question "What's up in Decred and where it is heading?" @bee wrote a [summary](https://www.reddit.com/r/decred/comments/q1402a/weekly_many_musings_mondays/hfji878/) of recent developments and mid-term goals.
 
 @cryptotivo congratulates everyone with 600K "boring" blocks milestone:
 
@@ -358,7 +352,7 @@ Other non-English content:
 
 In October DCR was trading between USD 102.40-140.10 / BTC 0.0018-0.0025. The average daily rate was $121.57.
 
-@tacorevenge published the [second part](https://medium.com/@tacorevenge/the-suppressor-part-2-on-chain-analysis-6561c5a478c4) of an investigation of The Suppressor entity that some community members suspect of manipulating DCR markets. This time on-chain analysis was used to see how funds have been flowing between centralized exchanges and DCRDEX.
+@tacorevenge published the [second part](https://medium.com/@tacorevenge/the-suppressor-part-2-on-chain-analysis-6561c5a478c4) of an investigation of The Suppressor entity that is suspected of manipulating DCR markets. This time on-chain analysis was used to see how funds have been flowing between miners, centralized exchanges and DCRDEX.
 
 { image: dcrdex volume october }
 
