--- a/journal/202110.md
+++ b/journal/202110.md
@@ -184,7 +184,7 @@ _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and
 
 User-facing changes:
 
-- added a button to quickly [hide](https://github.com/planetdecred/godcr/pull/646) wallet balance to increase user's shoulder privacy
+- added a button to quickly [hide](https://github.com/planetdecred/godcr/pull/646) wallet balance to increase user's over the shoulder privacy
 - added a [reminder](https://github.com/planetdecred/godcr/pull/663) to back up the seed words
 - cycle input fields with the [Tab key](https://github.com/planetdecred/godcr/pull/640)
 - unified [terminology](https://github.com/planetdecred/godcr/pull/645) about passwords and seeds
@@ -208,7 +208,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 
 { image candidates: 663, 646(comment), 664 - any better shots? }
 
-Development continued despite the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) getting rejected (49% Yes). Look forward to the revised version and new app builds.
+Development continued despite the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) getting rejected (49% Yes). Looking forward to the revised version and new app builds.
 
 <a id="dcrdata" />
 
@@ -249,7 +249,7 @@ See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047
 - 31 proposals published, of which 20 approved, 11 rejected, 2 abandoned
 - average (mean) voter participation improved considerably with 46% in year 3, compared to 31% in year 1 and 28% in year 2
 - software development proposals have increased in count, budgets, and voter support
-- { maybe add a similar 1-sentence recap of how Marketing proposals have changed, I didnt grasp the big picture - @bee }
+- marketing proposals have decreased in number so that these are no longer the dominant type, and particularly the number of marketing proposals which end with very low approval has reduced.
 - the proportion of proposals from people who are already contractors has gone up from 48% in year 2 to 77% in year 3
 - the number of mixed tickets (those with extra privacy) has been increasing
 - all-time stats for 3 years: 128 proposals published, of which 66 approved, 42 rejected, 20 abandoned
@@ -359,9 +359,9 @@ In October DCR was trading between USD 102.40-140.10 / BTC 0.0018-0.0025. The av
 
 ## Relevant External
 
-Zcash has been polling its coinholders again, this time on the subject of whether to change the consensus mechanism away from Proof of Work. 85% of the 41,000 ZEC that voted put a switch from PoW as the number one priority for the project. { maybe add what % of supply the 41K ZEC is; also, is there a link? bonus: mention what alternatives they consider, if any at this point}
+Zcash has been [polling](https://electriccoin.co/blog/coin-holder-poll-results-summary/) its coinholders again, this time on the subject of whether to change the consensus mechanism away from Proof of Work. 85% of the 41,000 ZEC (0.3% of circulating supply) that voted put a switch from PoW as the number one priority for the project. The aim is to move away from Proof of Work entirely, to some form of Proof of Stake or equivalent.
 
-Sam Altman and other Silicon Valley VCs [revealed](https://www.coindesk.com/tech/2021/10/25/why-everyone-is-mad-at-sam-altmans-worldcoin/) their vision for a universal basic income that people must submit unique eyeball hashes to claim, and privacy advocates have piled on to say it's a bad idea. Notable features are the orb-shaped eyeball scanners, reminiscent of dystopian science fiction, and the 20% VC premine.
+Sam Altman and other Silicon Valley VCs [revealed](https://www.coindesk.com/tech/2021/10/25/why-everyone-is-mad-at-sam-altmans-worldcoin/) their vision for a universal basic income that people must submit unique eyeball hashes to claim, and privacy advocates have piled on to say it's a bad idea. Notable features are the orb-shaped eyeball scanners reminiscent of dystopian science fiction, and the 20% VC premine.
 
 The latest DeFi airdrop farming [controversy](https://www.coindesk.com/tech/2021/10/08/airdrop-ethics-vc-firm-draws-ire-following-25m-ribbon-finance-exploit/) concerns Ribbon Finance, where one researcher from Divergence Ventures successfully met the qualifying criteria with hundreds of different wallets and received tokens worth $2.5 million. An independent researcher noticed the pattern and identified the wallet owner through association with an ENS domain, they [suggested](https://twitter.com/gabagooldoteth/status/1446498569603756033) copytrading them on Twitter, but it blew up and Divergence Ventures ended up giving back all the airdropped tokens. 
 
