reword intro a bit

--- a/journal/202110.md
+++ b/journal/202110.md
@@ -4,14 +4,12 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-Highlights for October: {
+Highlights for October:
 
-- Politeia celebrated its third year of operation
-- The mobile wallets proposal from @raedah was funded for another year, the GoDCR proposal was rejected but a revised proposal is being prepared
-- Bitcoin SPV support has been added to DCRDEX, and merged changes make it possible to pay registration fees in Bitcoin
-- maybe summarize that things are shaping up for the next release
-
-}
+- Politeia celebrated its third year of operation and had another busy development month.
+- The mobile wallets proposal from @raedah was funded for another year, the GoDCR proposal was rejected but a revised proposal is being prepared.
+- Changes merged in DCRDEX make it possible to pay registration fees in BTC and use a built-in SPV wallet without running a Bitcoin full node.
+- { maybe add 1-2 more bullets }
 
 Contents: { sync }
 
@@ -249,7 +247,7 @@ See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047
 - 31 proposals published, of which 20 approved, 11 rejected, 2 abandoned
 - average (mean) voter participation improved considerably with 46% in year 3, compared to 31% in year 1 and 28% in year 2
 - software development proposals have increased in count, budgets, and voter support
-- marketing proposals have decreased in number so that these are no longer the dominant type, and particularly the number of marketing proposals which end with very low approval has reduced.
+- marketing proposals have decreased in number so that these are no longer the dominant type, and particularly the number of marketing proposals which end with very low approval has reduced
 - the proportion of proposals from people who are already contractors has gone up from 48% in year 2 to 77% in year 3
 - the number of mixed tickets (those with extra privacy) has been increasing
 - all-time stats for 3 years: 128 proposals published, of which 66 approved, 42 rejected, 20 abandoned
