--- a/journal/202110.md
+++ b/journal/202110.md
@@ -76,7 +76,9 @@ Internal:
 - added a new GUI tool for [translating](https://github.com/decred/decrediton/pull/3569) strings and a [guide](https://github.com/decred/decrediton/blob/master/app/i18n/community_translators.md) for community translators
 - automated tests for [Accounts](https://github.com/decred/decrediton/pull/3577) views
 
-{ image candidates: 3534 3551 3560 }
+![Decrediton LN Overview](../img/202110.2.github.png)
+
+_Decrediton LN Overview_
 
 <a id="politeia" />
 
@@ -116,7 +118,9 @@ Refactoring in preparation for the [user layer rewrite](https://github.com/decre
 - moved [identity](https://github.com/decred/politeia/pull/1530) handling methods to more appropriate places
 - added a generic [session store](https://github.com/decred/politeia/pull/1555) (will replace the [legacy](https://github.com/decred/politeia/pull/1554) one that did not have proper separation of concerns)
 
-{ image candidates: maybe [2625](https://github.com/decred/politeiagui/pull/2625), or just skip this time }
+![No free money on Politeia](../img/202110.3.github.png)
+
+_No free money on Politeia_
 
 <a id="vspd" />
 
@@ -163,7 +167,9 @@ Progress towards Ethereum support:
 - added function to initiate a [batch](https://github.com/decred/dcrdex/pull/1251) of multiple swaps in the same transaction (saves gas)
 - [derive](https://github.com/decred/dcrdex/pull/1225) the internal Ethereum wallet from DEX app seed
 
-{ image candidates: 1232, from twitter }
+![DCRDEX markets overview](../img/202110.4.full.png)
+
+_DCRDEX markets overview. Shown data is not real._
 
 <a id="dcrios" />
 
@@ -171,8 +177,6 @@ Progress towards Ethereum support:
 
 - show non-zero balances with [8 decimals](https://github.com/planetdecred/dcrios/pull/857)
 - fixed colors and icons for the dark mode
-
-{ image candidates: 862, 864 }
 
 <a id="godcr" />
 
@@ -204,7 +208,9 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 - updated to [latest](https://github.com/planetdecred/dcrlibwallet/pull/209) dcrd, dcrwallet, and dcrdata modules
 - added function to get the [timestamp](https://github.com/planetdecred/dcrlibwallet/pull/208) of the last sync with Politeia
 
-{ image candidates: 663, 646(comment), 664 - any better shots? }
+![GoDCR Proposals view](../img/202110.5.full.png)
+
+_GoDCR Proposals view_
 
 Development continued despite the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) getting rejected (49% Yes). Looking forward to the revised version and new app builds.
 
@@ -252,7 +258,9 @@ See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047
 - the number of mixed tickets (those with extra privacy) has been increasing
 - all-time stats for 3 years: 128 proposals published, of which 66 approved, 42 rejected, 20 abandoned
 
-{ image: maybe some chart from year 3 report }
+![Politeia third year](../img/202110.6.github.png)
+
+_Politeia third year_
 
 
 ## Network
@@ -263,11 +271,17 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Nov 1: Poolin 42%, F2Pool 31%, Antpool 9%, BTC.com 7%, Luxor 5%, ViaBTC 5%, OKEx 0.7%, unknown 0.3%.
 
+![Decred hashrate May-Oct 2021](../img/202110.7.github.png)
+
+_Decred hashrate May-Oct 2021_
+
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=ku5ml4us-kvgwhe37&axis=time&visibility=true-true&mode=stepped) varied between 139.7-209.7 DCR, with 30-day [average](https://dcrstats.com/) at 191.6 DCR (-7.8).
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) was 7.65-8.20 million DCR, meaning that 56.7-61.1% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-{ image: dcrdata stake% shot }
+![Decred ticket pool May-Oct 2021](../img/202110.8.github.png)
+
+_Decred ticket pool May-Oct 2021_
 
 **VSP**: On Nov 1, ~7,400 (-200) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 224 (+4) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 18.9% (-0.1%) of the ticket pool.
 
@@ -276,8 +290,6 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 Node versions as of Nov 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (245 total, dcrd only): v1.6.2 - 59%, v1.7 dev builds - 13%, v1.6.0 - 12%, v1.6.1 - 9%, v1.6 dev builds - 3%, v1.5.2 - 2%, v1.5.1 - 0.8%.
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q3lq8-l0s732o6&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 52.3-54.4% and set a new all-time high with the sum of mixed unspent coins above 7.3 million.
-
-{ image: dcrdata mixed% shot }
 
 
 ## Ecosystem
@@ -352,7 +364,9 @@ In October DCR was trading between USD 102.40-140.10 / BTC 0.0018-0.0025. The av
 
 @tacorevenge published the [second part](https://medium.com/@tacorevenge/the-suppressor-part-2-on-chain-analysis-6561c5a478c4) of an investigation of The Suppressor entity that is suspected of manipulating DCR markets. This time on-chain analysis was used to see how funds have been flowing between miners, centralized exchanges and DCRDEX.
 
-{ image: dcrdex volume october }
+![DCRDEX October trading volume](../img/202110.9.full.png)
+
+_DCRDEX October trading volume_
 
 
 ## Relevant External
