--- a/journal/202110.short.md
+++ b/journal/202110.short.md
@@ -8,7 +8,7 @@ Highlights:
 
 - Politeia celebrated three years of operation. Average voter turnout increased significantly with 46% in year three, compared to 28% in year two. 20 proposals have been approved, mostly for software development, and mostly from existing contractors. 11 proposals got rejected.
 
-- The mobile wallets proposal from @raedah was funded for another year. The GoDCR desktop wallet proposal was rejected but a revised proposal is being prepared.
+- The mobile wallets proposal from raedah was funded for another year. The GoDCR desktop wallet proposal was rejected but a revised proposal is being prepared.
 
 - Changes merged in DCRDEX make it possible to pay registration fees in BTC too (in addition to DCR) and trade with a built-in light wallet without running a Bitcoin full node.
 
