--- a/journal/202110.md
+++ b/journal/202110.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – October 2021
+# Decred Journal – October 2021
 
 ![abstract art by @saender](../img/202110.1.github.png)
 
@@ -9,7 +9,6 @@ Highlights for October:
 - Politeia celebrated its third year of operation and had another busy development month.
 - The mobile wallets proposal from @raedah was funded for another year, the GoDCR proposal was rejected but a revised proposal is being prepared.
 - Changes merged in DCRDEX make it possible to pay registration fees in BTC and use a built-in SPV wallet without running a Bitcoin full node.
-- { maybe add 1-2 more bullets }
 
 Contents:
 
