--- a/journal/202110.short.md
+++ b/journal/202110.short.md
@@ -8,17 +8,17 @@ Highlights:
 
 - Politeia celebrated three years of operation. Average voter turnout increased significantly with 46% in year three, compared to 28% in year two. 20 proposals have been approved, mostly for software development, and mostly from existing contractors. 11 proposals got rejected.
 
-- The mobile wallets proposal from raedah was funded for another year. The GoDCR desktop wallet proposal was rejected but a revised proposal is being prepared.
+- The mobile wallets proposal from raedah was funded for another year. The GoDCR desktop wallet proposal was rejected (49% out of 60% needed Yes) but a revised proposal is being prepared.
 
-- Changes merged in DCRDEX make it possible to pay registration fees in BTC too (in addition to DCR) and trade with a built-in light wallet without running a Bitcoin full node.
+- Changes merged in DCRDEX make it possible to pay registration fees in BTC too (not only in DCR) and trade DCR/BTC using a built-in light wallet without running a Bitcoin full node.
 
-That should do it for a super quick Instagram intro. Hardcore followers, make your 2 cups of coffee and read the full report:
+Hardcore followers are welcome to read the full report at:
 
-{ medium link }
+medium.com/decred
 
-And for the minimalists out there here's a version with light pages and no tracking:
+For minimalists out there here's a mirror with light pages and no tracking:
 
-{ github link }
+xaur.github.io/decred-news
 
 Artwork: Remote Node Outpost by saender
 
