split intro bullet

--- a/journal/202110.md
+++ b/journal/202110.md
@@ -7,7 +7,8 @@ _Image: Remote Node Outpost by @saender_
 Highlights for October:
 
 - Politeia celebrated its third year of operation and had another busy development month.
-- The mobile wallets proposal from @raedah was funded for another year, the GoDCR proposal was rejected but a revised proposal is being prepared.
+- The mobile wallets proposal from @raedah was funded for another year.
+- The GoDCR proposal was rejected but a revised proposal is being prepared. Development continues to polish the wallet for a mainnet release.
 - Changes merged in DCRDEX make it possible to pay registration fees in BTC and use a built-in SPV wallet without running a Bitcoin full node.
 
 Contents:
@@ -403,7 +404,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, l1ndseymm, richardred
+- writing and editing: bee, bochinchero, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, lukebp
 - title image: saender
 - funding: Decred stakeholders
