--- a/journal/202111.md
+++ b/journal/202111.md
@@ -262,6 +262,8 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 { recap of ticket price action if it was interesting }
 
+ticket chart from bochinchero https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$jz8tWeRZ9MurrDNrdnZJ4mejk5oE7z11V18XlLTwz1g
+
 **VSP**: On {}, {} (+{}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and {} (-{}) by listed legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool.
 
 **Nodes**: Throughout November there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
@@ -285,6 +287,12 @@ Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) (
 
 { check #services for news }
 
+https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/
+
+ZH pow pools closed? https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$YRgVskW8KFfdrURZA2kiO8X5FY-jFV-B5NlaUFM8UXI
+
+First in FTX privacy PERP due to a bug https://twitter.com/Mattgetsbarrel1/status/1458878453198073866 { worth a mention? }
+
 { check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
@@ -293,6 +301,14 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 ## Outreach
 
 { overview of outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending the message out" }
+
+{ Odysee account https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$bkfiP9sHiMSVHcB17Bk_JnBmgalM3cU7BId4nY81qCY https://odysee.com/@Decred }
+
+Odysee (LBRY) users please support the account.
+
+Trying out IG, feedback from IG veterans welcome https://www.instagram.com/decredproject/
+
+https://onlyfans.com/decred - I'll just post the link verbaitm. I don't know what to say. (@bee)
 
 
 ## Events
@@ -318,7 +334,8 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48
+- https://www.investing.com/analysis/decred-a-top-tier-cryptocurrency-200609428
 
 Videos:
 
@@ -330,7 +347,7 @@ Audio:
 
 Art and fun:
 
-- {}
+- https://twitter.com/TheBochinchero/status/1459932658121822210 and similar
 
 Translations:
 
