--- a/journal/202111.md
+++ b/journal/202111.md
@@ -231,7 +231,7 @@ Other:
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ... !
+Welcome to new first time contributors with code merged to master: {NO NEW CONTRIBUTORS THIS MONTH}
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
