--- a/journal/202111.md
+++ b/journal/202111.md
@@ -273,7 +273,7 @@ See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the mo
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) opened at ~278 Ph/s and closed ~437 Ph/s, bottoming at 221 Ph/s and peaking at 441 Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
