--- a/journal/202111.md
+++ b/journal/202111.md
@@ -285,7 +285,7 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) was 7.42-8.19 million DCR, meaning that 54.7-60.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-{ recap of ticket price action if it was interesting }
+After a drop in large drop in stake participation(and prices), the resulting ticket buying saw a new ATH ticket price of 327.8 DCR.
 
 ticket chart from bochinchero https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$jz8tWeRZ9MurrDNrdnZJ4mejk5oE7z11V18XlLTwz1g
 
