--- a/journal/202111.md
+++ b/journal/202111.md
@@ -317,7 +317,10 @@ Node versions as of Dec 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/
 
-ZH pow pools closed? https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$YRgVskW8KFfdrURZA2kiO8X5FY-jFV-B5NlaUFM8UXI
+ZH pow pools closed?
+
+- https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$YRgVskW8KFfdrURZA2kiO8X5FY-jFV-B5NlaUFM8UXI
+- https://f2pool.io/mining/updates/#20211015
 
 First in FTX privacy PERP due to a bug https://twitter.com/Mattgetsbarrel1/status/1458878453198073866 { worth a mention? }
 
