--- a/journal/202111.md
+++ b/journal/202111.md
@@ -8,6 +8,7 @@ November's highlights: {
 
 - Politeia release
 - two new reusable packages in dcrd, a one general purpose for working with big numbers, and one for building Decred apps
+- CSPP PQ stuff - is it safe for "highlights"?
 
 }
 
@@ -173,21 +174,13 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 { image candidates: 303 302 }
 
-<a id="dcrstakepool" />
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-_dcrstakepool is server software for running a Voting Service Provider. This was used before vspd and is now referred to as "legacy VSP"._
-
-- {}
-
 <a id="dcrpool" />
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
 _dcrpool is server software for running a mining pool._
 
-- {}
+- [updated](https://github.com/decred/dcrpool/pull/337) to `master` versions of dcrd and dcrwallet (this breaks compatibility with the 1.6 release)
 
 <a id="dcrlnd" />
 
@@ -195,7 +188,7 @@ _dcrpool is server software for running a mining pool._
 
 _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-cost transactions._
 
-- {}
+- updated to latest [`walletdb`](https://github.com/decred/dcrlnd/pull/149) package from btcwallet
 
 <a id="cspp" />
 
@@ -203,7 +196,8 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
 
-- {}
+- implemented post-quantum key exchange based on Streamlined [NTRU Prime](https://ntruprime.cr.yp.to/index.html) 4591^761. This key exchange occurs in addition to an x25519 key exchange as previously, such that if a weakness in [sntrup4591761](https://github.com/companyzero/sntrup4591761) is discovered, the security won't reduce to anything worse than just x25519.
+- fixed a potential DoS vector where invalidation of unmixed data (e.g. due to a double spend) could fail a mix. It has not been exploited to developers' knowledge. This change also makes validation concurrent to reduce latency.
 
 <a id="dcrdex" />
 
