move CSPP PQ stuff to Dec
GitHub reports it was merged Dec 3:

https://github.com/decred/cspp/pull/73

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -8,7 +8,6 @@ November's highlights: {
 
 - Politeia release
 - two new reusable packages in dcrd, a one general purpose for working with big numbers, and one for building Decred apps
-- CSPP PQ stuff - is it safe for "highlights"?
 
 }
 
@@ -196,8 +195,7 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
 
-- implemented post-quantum key exchange based on Streamlined [NTRU Prime](https://ntruprime.cr.yp.to/index.html) 4591^761. This key exchange occurs in addition to an x25519 key exchange as previously, such that if a weakness in [sntrup4591761](https://github.com/companyzero/sntrup4591761) is discovered, the security won't reduce to anything worse than just x25519.
-- fixed a potential DoS vector where invalidation of unmixed data (e.g. due to a double spend) could fail a mix. It has not been exploited to developers' knowledge. This change also makes validation concurrent to reduce latency.
+- fixed a potential [DoS vector](https://github.com/decred/cspp/pull/75) where invalidation of unmixed data (e.g. due to a double spend) could fail a mix. It has not been exploited to developers' knowledge. This change also makes validation concurrent to reduce latency.
 
 <a id="dcrdex" />
 
