Dev dcrandroid, dcrios, godcr

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -232,15 +232,21 @@ Progress towards Ethereum support:
 
 **[Decred Wallet (Android)](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+- notify user when Internet [connection](https://github.com/planetdecred/dcrandroid/pull/604) is not available and pause the sync
+- use term ["seed words"](https://github.com/planetdecred/dcrandroid/pull/600) consistently
+- updated [French](https://github.com/planetdecred/dcrandroid/pull/586) translation
+- fixed [links](https://github.com/planetdecred/dcrandroid/pull/599) to proposals website
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+{ image candidates: skipping for low activity, but just in case: 604 }
 
 <a id="dcrios" />
 
 **[Decred Wallet (iOS)](https://github.com/planetdecred/dcrios)**
 
-- {}
+- fixed icons of [active tabs](https://github.com/planetdecred/dcrios/pull/874)
+- fixed dropdown [closing](https://github.com/planetdecred/dcrios/pull/872) when tapping outside
+
+{ image candidates: skipping for low activity, but just in case: 874 }
 
 <a id="godcr" />
 
@@ -248,7 +254,20 @@ Progress towards Ethereum support:
 
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
-- {}
+- implemented new UI design for the [Staking](https://github.com/planetdecred/godcr/pull/679) page (renamed from Tickets)
+- implemented new [Governance](https://github.com/planetdecred/godcr/pull/691) UI with a new welcome page
+- updated [Settings](https://github.com/planetdecred/godcr/pull/684) page design
+- show account [mixer](https://github.com/planetdecred/godcr/pull/701) view to the Overview page
+- added ability to spend from the [unmixed](https://github.com/planetdecred/godcr/issues/674) account
+- ~{} bug fixes { 682 685 692 691*2 695 696 704 693 - remove after review }
+
+Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (shared by Android/iOS wallets and GoDCR):
+
+- added [`dexdcr`](https://github.com/planetdecred/dcrlibwallet/pull/210) package to allow client apps to integrate DCRDEX
+
+{ note on how's the revised proposal going and what to expect }
+
+{ image candidates: 685 701 - if you have better images please share }
 
 <a id="dcrdata" />
 
