--- a/journal/202111.md
+++ b/journal/202111.md
@@ -8,6 +8,7 @@ November's highlights: {
 
 - Politeia release
 - two new reusable packages in dcrd, a one general purpose for working with big numbers, and one for building Decred apps
+- first official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged
 
 }
 
@@ -269,29 +270,15 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 
 { image candidates: 685 701 - if you have better images please share }
 
-<a id="dcrdata" />
-
-**[dcrdata](https://github.com/decred/dcrdata)**
-
-_dcrdata is an explorer for Decred blockchain and off-chain data like Politeia proposals, markets, and more._
-
-- {}
-
-<a id="tinydecred" />
-
-**[TinyDecred](https://github.com/decred/tinydecred)**
-
-_TinyDecred is a toolkit for integrating Decred into Python projects. It includes an experimental light GUI wallet based on PyQt5._
-
-- {}
-
 <a id="dcrros" />
 
 **[dcrros](https://github.com/decred/dcrros)**
 
 _dcrros is a middleware service that provides access to the Decred network via Rosetta API._
 
-- {}
+- v0.1.0 has been assigned as the first official release of dcrros. It embeds core Decred software v1.6.0 and implements Rosetta spec v1.4.10. See more in the [release notes](https://github.com/decred/dcrros/blob/master/docs/release-notes/release-notes-0.1.0.md).
+- updated to use [latest](https://github.com/decred/dcrros/pull/23) released Decred v1.6.2 and Rosetta SDK v0.7.2. Also added an `--offline` flag to simplify running offline instances of dcrros (e.g. for tx construction and signing, possibly on an airgapped setup).
+- the above change has been released as [v0.1.1](https://github.com/decred/dcrros/pull/24)
 
 <a id="dcrdocs" />
 
