Dev dcrdocs, dcrweb

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -286,15 +286,8 @@ _dcrros is a middleware service that provides access to the Decred network via R
 
 _dcrdocs is the source code for Decred [user documentation](https://docs.decred.org/)._
 
-- {}
-
-<a id="dcrdevdocs" />
-
-**[dcrdevdocs](https://github.com/decred/dcrdevdocs)**
-
-_dcrdevdocs is the source code for Decred [developer documentation](https://devdocs.decred.org/)._
-
-- {}
+- [updated](https://github.com/decred/dcrdocs/pull/1190) mkdocs-material theme and polished Markdown sources
+- updated CSPP docs with new [epoch time](https://github.com/decred/dcrdocs/pull/1188) (this is how often mixes occur) of 15 minutes, down from 20 minutes
 
 <a id="dcrweb" />
 
@@ -302,7 +295,9 @@ _dcrdevdocs is the source code for Decred [developer documentation](https://devd
 
 _dcrweb is the source code for the decred.org website._
 
-- {}
+- [added](https://github.com/decred/dcrweb/pull/1018) the governance milestone [press release](https://decred.org/press/2021-10-27_decred_hits_governance_milestone/)
+- added [author names](https://github.com/decred/dcrweb/pull/1015) to press coverage items
+- updated [Lottie](https://github.com/decred/dcrweb/pull/1020) animations library, fixing animations on [release](https://decred.org/release/) and [history](https://decred.org/history/) pages
 
 { check other repos in:
 
